--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 :root {
+  /* --background: #ffffff; */
   --background: #ffffff;
+  /* --foreground: #171717; */
   --foreground: #171717;
 }
 
@@ -11,7 +13,7 @@
   :root {
     --background: #0a0a0a;
     /* --foreground: #ededed; */
-    --foreground: #0a0a0a;
+    --foreground: #ffffff;
   }
 }
 
