--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -7,6 +7,7 @@
   --background: #ffffff;
   /* --foreground: #171717; */
   --foreground: #171717;
+  overflow: hidden;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -57,6 +58,7 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -89,6 +91,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -100,8 +103,7 @@ body {
 }
 
 .dark .swal2-popup {
-  background-color: #1f2937; /* gray-800 */
+  background-color: #1f2937;
+  /* gray-800 */
   color: white;
 }
-
-
